# proxysql_mysqlbinlog

./: .gitignore  Makefile  README.md  docker-compose.yml  libslave  proxysql_binlog_reader.cpp  proxysql_binlog_reader_macro.h  proxysql_gtid.cpp  proxysql_gtid.h
.github/actions/load-images/: action.yml
.github/workflows/: ci-build.yml  ci-test.yml  ci.yml  release.yml
docker/entrypoint-deb/: entrypoint.bash
docker/entrypoint-rpm/: entrypoint.bash
docker/images/: .gitignore  Makefile
docker/images/OLD/mysqlbinlog-debian10/: Dockerfile
docker/images/mysqlbinlog-centos10/: Dockerfile
docker/images/mysqlbinlog-centos7/: Dockerfile
docker/images/mysqlbinlog-centos8/: Dockerfile
docker/images/mysqlbinlog-centos9/: Dockerfile
docker/images/mysqlbinlog-debian10/: Dockerfile
docker/images/mysqlbinlog-debian11/: Dockerfile
docker/images/mysqlbinlog-debian12/: Dockerfile
docker/images/mysqlbinlog-debian13/: Dockerfile
docker/images/mysqlbinlog-debian9/: Dockerfile
docker/images/mysqlbinlog-ubuntu16/: Dockerfile
docker/images/mysqlbinlog-ubuntu18/: Dockerfile
docker/images/mysqlbinlog-ubuntu22/: Dockerfile
docker/images/mysqlbinlog-ubuntu24/: Dockerfile
libslave/: .gitignore  CMakeLists.txt  DefaultExtState.h  README.md  Slave.cpp  Slave.h  SlaveStats.h  binlog_pos.cpp  binlog_pos.h  collate.h  dec_util.cpp  field.cpp  field.h  nanomysql.h  relayloginfo.h  slave_log_event.cpp  slave_log_event.h  table.h  types.h
libslave/test/: CMakeLists.txt  db_filler.cpp  test.cpp  unit_test.cpp
libslave/test/data/OneField/: BIT  DATE  DATETIME  SET  TIME  TIMESTAMP  YEAR
patches/: libslave_DBUG_ASSERT.patch  libslave_ER_MALFORMED_GTID_SET_ENCODING.patch  libslave_GET_SERVER_PUBLIC_KEY.patch  libslave_MySQL_8_new_events.patch  libslave_SSL_MODE_DISABLED.patch  libslave_new_binlog_events.patch  libslave_show_master_status_deprecated.patch  slave_allow_rep_formats.patch
test/: README.md  test1.cpp  test3.cpp  test5.cpp
test/infra/: Dockerfile.infra  Dockerfile.runner  clean-infra.sh  docker-compose.yml  docker-image-test.sh  entrypoint.sh  start-test.sh
test/old/: Makefile  test4.cpp  test_libslave-2.cpp  test_libslave-5.cpp
test/tap/: Makefile  binlog_reader_client.cpp  binlog_reader_client.h  binlog_reader_process.cpp  binlog_reader_process.h  command_line.cpp  command_line.h  mysql_client.cpp  mysql_client.h  run.sh  tap.cpp  tap.h  tap_utils.h
test/tap/tests/: Makefile  binlog_reader_startup-t.cpp  test_basic_startup-t.cpp  test_basic_updates-t.cpp  test_batched_updates-t.cpp  test_connect_disconnect-t.cpp  test_consecutive_writes-t.cpp  test_multi_client-t.cpp  test_sparse_intervals-t.cpp
(+2 files in other folders)
